# YTDown

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
docs/superpowers/plans/: 2026-03-24-image-download-feature.md  2026-03-26-url-history.md
docs/superpowers/specs/: 2026-03-24-image-download-feature-design.md  2026-03-25-url-history-design.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: check_safari_access.toml  delete_image_session.toml  download_images.toml  install_ytdlp.toml  list_image_sessions.toml  list_session_images.toml  scrape_images.toml
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: browser.rs  cookies.rs  download.rs  file_ops.rs  formats.rs  images.rs  library.rs  mod.rs  playlists.rs  settings.rs  url_lists.rs  ytdlp_mgmt.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.sql
src-tauri/src/images/: downloader.rs  mod.rs  scraper.rs
src-tauri/src/ytdlp/: binary.rs  mod.rs  parser.rs  process.rs
src/assets/: main.css
src/components/download/: DownloadDialog.vue  DownloadProgress.vue  DownloadQueue.vue
src/components/images/: ImageDownloadView.vue  ImageGalleryView.vue  ImagePreviewGrid.vue  ImageSlideshow.vue  ImageThumbnail.vue
src/composables/: useDownload.ts  useFileManager.ts  useYtdlp.ts
src/stores/: downloads.ts  images.ts  library.ts  playlists.ts  settings.ts
src/styles/: macos.css
src/types/: index.ts
(+10 files in other folders)
